--- a/homeworks/HW5/HW5-Final.ipynb
+++ b/homeworks/HW5/HW5-Final.ipynb
@@ -415,11 +415,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "def progress_rate(v1,x,k):\n",
+    "    \"\"\"Returns the progress rate of a reaction of the form: v1A + v2B -> v3C.\n",
+    "    \n",
+    "    INPUTS\n",
+    "    =======\n",
+    "    v1: list, \n",
+    "       stoichiometric coefficient of reactants in a reaction(s)\n",
+    "    x: float,\n",
+    "       Concentration of A, B, C\n",
+    "    k: float, \n",
+    "       reaction rate coefficient\n",
+    "    \n",
+    "    RETURNS\n",
+    "    ========\n",
+    "    progress rate: a list of the progress rate of each reaction\n",
+    "    \n",
+    "    EXAMPLES\n",
+    "    =========\n",
+    "    >>> progress_rate([2.0,1.0,0.0],[1.0,2.0,3.0],10)\n",
+    "    [20.0]\n",
+    "    \"\"\"\n",
     "    #Check that x and v1 are lists\n",
     "    if (type(v1) != list or type(x) != list):\n",
     "        raise TypeError(\"v' & x must be passed in as a list\")\n",
@@ -460,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +489,7 @@
        "[20.0]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -477,6 +497,15 @@
    "source": [
     "progress_rate([2.0,1.0,0.0],[1.0,2.0,3.0],10)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -531,7 +560,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -601,11 +632,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "def reaction_rate(v1,v2,x,k):\n",
+    "    \"\"\"Returns the reaction rate of a reaction of the form: v1A + v2B -> v3C.\n",
+    "    \n",
+    "    INPUTS\n",
+    "    =======\n",
+    "    v1: 2D list, \n",
+    "       stoichiometric coefficient of reactants in a reaction(s)\n",
+    "    v2: 2D list, optional, default value is 2\n",
+    "       stoichiometric coefficient of products in a reaction(s)\n",
+    "    x: float,\n",
+    "       Concentration of A, B, C\n",
+    "    k: float, \n",
+    "       reaction rate coefficient\n",
+    "    \n",
+    "    RETURNS\n",
+    "    ========\n",
+    "    reaction rate: a list of the reaction rate of each reactant\n",
+    "    \n",
+    "    EXAMPLES\n",
+    "    =========\n",
+    "    >>> reaction_rate([[1.0,0.0],[2.0,0.0],[0.0,2.0]],[[0.0,1.0],[0.0,2.0],[1.0,0.0]],[1.0,2.0,1.0],10)\n",
+    "    [-30.0, -60.0, 20.0]\n",
+    "    \"\"\"\n",
     "    w = progress_rate(v1,x,k)\n",
     "    #Check that x,v2 and v1 are lists\n",
     "    if (type(v2) != list or type(x) != list or type(v1)!= list):\n",
@@ -626,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +688,7 @@
        "[-30.0, -60.0, 20.0]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -701,6 +754,26 @@
     "%%file chemkin.py\n",
     "\n",
     "def progress_rate(v1,x,k):\n",
+    "    \"\"\"Returns the progress rate of a reaction of the form: v1A + v2B -> v3C.\n",
+    "    \n",
+    "    INPUTS\n",
+    "    =======\n",
+    "    v1: list, \n",
+    "       stoichiometric coefficient of reactants in a reaction(s)\n",
+    "    x: float,\n",
+    "       Concentration of A, B, C\n",
+    "    k: float, \n",
+    "       reaction rate coefficient\n",
+    "    \n",
+    "    RETURNS\n",
+    "    ========\n",
+    "    progress rate: a list of the progress rate of each reaction\n",
+    "    \n",
+    "    EXAMPLES\n",
+    "    =========\n",
+    "    >>> progress_rate([2.0,1.0,0.0],[1.0,2.0,3.0],10)\n",
+    "    [20.0]\n",
+    "    \"\"\"\n",
     "    #Check that x and v1 are lists\n",
     "    if (type(v1) != list or type(x) != list):\n",
     "        raise TypeError(\"v' & x must be passed in as a list\")\n",
@@ -739,6 +812,28 @@
     "        return progress_rates\n",
     "    \n",
     "def reaction_rate(v1,v2,x,k):\n",
+    "    \"\"\"Returns the reaction rate of a reaction of the form: v1A + v2B -> v3C.\n",
+    "    \n",
+    "    INPUTS\n",
+    "    =======\n",
+    "    v1: list, \n",
+    "       stoichiometric coefficient of reactants in a reaction(s)\n",
+    "    v2: 2D list, optional, default value is 2\n",
+    "       stoichiometric coefficient of products in a reaction(s)\n",
+    "    x: float,\n",
+    "       Concentration of A, B, C\n",
+    "    k: float, \n",
+    "       reaction rate coefficient\n",
+    "    \n",
+    "    RETURNS\n",
+    "    ========\n",
+    "    reaction rate: a list of the reaction rate of each reactant\n",
+    "    \n",
+    "    EXAMPLES\n",
+    "    =========\n",
+    "    >>> reaction_rate([[1.0,0.0],[2.0,0.0],[0.0,2.0]],[[0.0,1.0],[0.0,2.0],[1.0,0.0]],[1.0,2.0,1.0],10)\n",
+    "    [-30.0, -60.0, 20.0]\n",
+    "    \"\"\"\n",
     "    w = progress_rate(v1,x,k)\n",
     "    #Check that x,v2 and v1 are lists\n",
     "    if (type(v2) != list or type(x) != list or type(v1)!= list):\n",
@@ -797,6 +892,66 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting test.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file test.py\n",
+    "import chemkin\n",
+    "def test_progress_rate():\n",
+    "    assert chemkin.progress_rate([3.0,1.0,1.0],[1.0,2.0,3.0],10) == [60.0]\n",
+    "test_progress_rate()\n",
+    "\n",
+    "def test_reaction_rate():\n",
+    "    assert chemkin.reaction_rate([[3.0,1.0,1.0]],[[1.0,2.0,1.0]],[1.0,2.0,3.0],10) == [-10.0]\n",
+    "test_reaction_rate()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m============================= test session starts ==============================\u001b[0m\n",
+      "platform darwin -- Python 3.6.1, pytest-3.2.1, py-1.4.33, pluggy-0.4.0\n",
+      "rootdir: /Users/riddhishah/Documents/cs207/cs207_riddhi_shah/homeworks/HW5, inifile:\n",
+      "plugins: cov-2.3.1\n",
+      "collected 0 items                                                               \u001b[0m\u001b[1m\u001b[1m\n",
+      "\n",
+      "\n",
+      "---------- coverage: platform darwin, python 3.6.1-final-0 -----------\n",
+      "Name                 Stmts   Miss  Cover   Missing\n",
+      "--------------------------------------------------\n",
+      "chemkin.py              43      9    79%   5, 8, 10, 18, 23, 32, 44, 46, 48\n",
+      "kinetics.py              4      0   100%\n",
+      "kinetics_tests.py       76      0   100%\n",
+      "reaction_coeffs.py      18      0   100%\n",
+      "test.py                  7      0   100%\n",
+      "--------------------------------------------------\n",
+      "TOTAL                  148      9    94%\n",
+      "\n",
+      "\u001b[33m\u001b[1m========================= no tests ran in 2.02 seconds =========================\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pytest --doctest-modules --cov-report term-missing --cov"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -809,12 +964,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Done by Hongxiang in our group!'"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'''Done by Hongxiang in our group!'''"
+   ]
   }
  ],
  "metadata": {
