Commit Before Pulling From Master

--- a/homeworks/HW5/HW5-Final.ipynb
+++ b/homeworks/HW5/HW5-Final.ipynb
@@ -499,15 +499,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -816,7 +807,7 @@
     "    \n",
     "    INPUTS\n",
     "    =======\n",
-    "    v1: list, \n",
+    "    v1: 2D list, \n",
     "       stoichiometric coefficient of reactants in a reaction(s)\n",
     "    v2: 2D list, optional, default value is 2\n",
     "       stoichiometric coefficient of products in a reaction(s)\n",
@@ -849,7 +840,7 @@
     "            for j in (range(len(v2[0]))):\n",
     "                reaction_rate = reaction_rate + (v2[i][j]-v1[i][j])*w[j]\n",
     "            reaction_rates.append(reaction_rate)\n",
-    "        return reaction_rates\n"
+    "        return reaction_rates"
    ]
   },
   {
