--- a/lectures/L10/Exercise_1.ipynb
+++ b/lectures/L10/Exercise_1.ipynb
@@ -21,37 +21,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "\n",
-    "class Circle:\n",
-    "    \n",
+    "import math\n",
+    "class CircleClass():\n",
     "    def __init__(self, x, y):\n",
     "        self.x = x\n",
     "        self.y = y\n",
-    "    \n",
     "    def radius(self):\n",
-    "        self.R = np.sqrt(self.x * self.x + self.y * self.y)\n",
-    "    \n",
+    "        r2 = self.x**2 + self.y**2\n",
+    "        r = math.sqrt(r2)\n",
+    "        return r\n",
     "    def area(self):\n",
-    "        try:\n",
-    "            self.A = np.pi * self.R* self.R\n",
-    "        except AttributeError:\n",
-    "            r = np.sqrt(self.x * self.x + self.y * self.y)\n",
-    "            self.A = np.pi * r * r\n",
-    "    \n",
-    "    def circum(self):\n",
-    "        try:\n",
-    "            self.C =  2.0 * np.pi * self.R\n",
-    "        except AttributeError:\n",
-    "            r = np.sqrt(self.x * self.x + self.y * self.y)\n",
-    "            self.C = 2.0 * np.pi * r"
+    "        r = self.radius()\n",
+    "        area = math.pi*(r**2)\n",
+    "        return area\n",
+    "    def circumference(self): \n",
+    "        r = self.radius()\n",
+    "        c = 2*math.pi*r\n",
+    "        return c\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'CircleClass'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-640d82e03f92>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mCircleClass\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mRcircle\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mCircleClass\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mradius\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mrepr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mRcircle\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'CircleClass'"
+     ]
+    }
+   ],
+   "source": [
+    "class Rcir"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
