--- a/lectures/L10/Exercise_1-Final.ipynb
+++ b/lectures/L10/Exercise_1-Final.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -48,35 +48,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'CircleClass'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-640d82e03f92>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mCircleClass\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mRcircle\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mCircleClass\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mradius\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mrepr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mRcircle\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'CircleClass'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "False\n"
      ]
     }
    ],
    "source": [
-    "class Rcircle(CircleClass)\n",
+    "class Rcircle(CircleClass):\n",
     "    def  __init__(self, r):\n",
-    "        self.r"
+    "        self.r = r\n",
+    "    def radius(self):\n",
+    "        return self.r\n",
+    "    def __eq__(self,other):\n",
+    "        return self.r == other.r\n",
+    "mycircle = Rcircle(4)\n",
+    "othercircle = Rcircle(5)\n",
+    "print(mycircle.radius())\n",
+    "print(mycircle == othercircle)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
