--- a/homeworks/HW6/HW6.ipynb
+++ b/homeworks/HW6/HW6.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -141,6 +141,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'AccountType' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-e4c87226527c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mAccountType\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSAVINGS\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'AccountType' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "AccountType.SAVINGS.value"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -151,6 +172,28 @@
     "Methods `withdraw(self, amount)` and `deposit(self, amount)` to modify the account balance of the account\n",
     "\n",
     "Override methods `__str__` to write an informative string of the account owner and the type of account, and `__len__` to return the balance of the account"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "class BankAccount():\n",
+    "    def _init_(self, owner, accountType):\n",
+    "        self.owner = owner\n",
+    "        self.accountType = accountType\n",
+    "    \n",
+    "    def withdraw(self, amount):\n",
+    "        #function to withdraw\n",
+    "        \n",
+    "    def deposit(self,amount):\n",
+    "        #function to deposit\n",
+    "    \n",
+    "        "
    ]
   },
   {
@@ -398,7 +441,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
