--- a/homeworks/HW3/HW3-Final.ipynb
+++ b/homeworks/HW3/HW3-Final.ipynb
@@ -395,6 +395,7 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
