--- a/lectures/L11/Exercise_1.ipynb
+++ b/lectures/L11/Exercise_1.ipynb
@@ -24,6 +24,87 @@
     "        `k for reaction01 =    6.8678391864294477e+05\n",
     "    k for reaction02 =    2.3105559199959813e+06`"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['H', 'O', 'OH', 'H2', 'O2']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import xml.etree.ElementTree as ET\n",
+    "reactions = ET.parse('rxns.xml')\n",
+    "ctml = reactions.getroot()\n",
+    "for phase in ctml.findall('phase'):\n",
+    "    species = phase.find('speciesArray').text\n",
+    "\n",
+    "species = species.split()\n",
+    "print(species)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "import numpy as np\n",
+    "\n",
+    "def arrhenius_rate(params, T, R=8.314):\n",
+    "    #Check that A,b,E is passed as a list\n",
+    "    if(len(params) != 3 or type(params) != list):\n",
+    "        print(\"ERROR: First argument needs to be a list of 3\")\n",
+    "    else:\n",
+    "        [A,b,E] = params\n",
+    "        #Check that A,b,E is passed are numbers\n",
+    "        if ((type(A) != int and type(A) != float) or \n",
+    "            (type(b) != int and type(b) != float) or\n",
+    "            (type(E) != int and type(E) != float)):\n",
+    "            print(\"Error: All numbers in list must be of type integer or float\")\n",
+    "        else:\n",
+    "            #Calculate k(T)\n",
+    "            kt = A*T**(b)*np.exp(-E/(R*T))\n",
+    "            return kt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "k for reaction0 = 686783.9186429448\n",
+      "k for reaction1 = 2310555.9199959813\n"
+     ]
+    }
+   ],
+   "source": [
+    "#get all reaction elements\n",
+    "for i, reaction in enumerate(ctml.find('reactionData').findall('reaction')):\n",
+    "    Arrhenius = reaction.find('rateCoeff').find('Arrhenius')\n",
+    "    A = float(Arrhenius.find('A').text)\n",
+    "    b = float(Arrhenius.find('b').text)\n",
+    "    E = float(Arrhenius.find('E').text)\n",
+    "    \n",
+    "    #calculate rate\n",
+    "    k = arrhenius_rate([A,b,E],1500)\n",
+    "    \n",
+    "    #print rate\n",
+    "    print(\"k for reaction{} = {}\".format(i,k))"
+   ]
   }
  ],
  "metadata": {
