--- a/homeworks/HW7/HW7.ipynb
+++ b/homeworks/HW7/HW7.ipynb
@@ -27,6 +27,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "class LinkedList():\n",
+    "    __init__"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
