--- a/lectures/L12/L12.ipynb
+++ b/lectures/L12/L12.ipynb
@@ -1352,7 +1352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1362,10 +1362,10 @@
     {
      "data": {
       "text/plain": [
-       "(10, (1, (2, (3, None))))"
+       "tuple"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1385,7 +1385,7 @@
     "ll_1 = make_ll(1, make_ll(2, make_ll(3, empty_ll))) # Recursively generate a linked list\n",
     "\n",
     "my_ll = make_ll(10,ll_1) # Make another one\n",
-    "my_ll"
+    "type(my_ll)"
    ]
   },
   {
