--- a/homeworks/HW7/HW7-Final.ipynb
+++ b/homeworks/HW7/HW7-Final.ipynb
@@ -28,19 +28,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 403,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Node():\n",
     "    def __init__(self,value,pointer):\n",
     "        self.value = value\n",
-    "        self.next = pointer"
+    "        self.next = pointer\n",
+    "    def __repr__(self):\n",
+    "        return str(self.value)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 404,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,13 +53,7 @@
     "    def __len__(self):\n",
     "        return len(self.nodes)\n",
     "    def __repr__(self):\n",
-    "        Linked_list = []\n",
-    "        node = self.head_node\n",
-    "        while node.next != None:\n",
-    "            Linked_list.append(node.value)\n",
-    "            node = node.next\n",
-    "        Linked_list.append(node.value)\n",
-    "        return Linked_list\n",
+    "        return \"LinkedList({})\".format(repr(self.head_node))\n",
     "    def __getitem__(self,index):\n",
     "        node_num = 0\n",
     "        node = self.head_node\n",
@@ -72,6 +68,29 @@
     "        while node.next != None:\n",
     "            node = node.next\n",
     "        node.next = Node(element,None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 406,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'LinkedList(3)'"
+      ]
+     },
+     "execution_count": 406,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "llist = LinkedList(1)\n",
+    "llist.insert_front(2)\n",
+    "llist.insert_front(3)\n",
+    "llist.__repr__()"
    ]
   },
   {
@@ -124,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 407,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,35 +173,38 @@
     "                self.add(value,node.right_child)\n",
     "    def getValues(self,depth,node=None,vals=[]):\n",
     "        if(node == None):\n",
-    "            node = self.tree\n",
+    "            if(self.tree == None):\n",
+    "                return []\n",
+    "            node = self.tree \n",
     "            vals = []\n",
     "        if (depth==0):\n",
     "            vals.append(node.value)\n",
-    "        if(node.left_child != None):\n",
-    "            getValues(node.left_child,depth-1,vals)\n",
     "        else:\n",
-    "            if (depth-1==0):\n",
-    "                vals.append(node.left_child)\n",
-    "        if(node.right_child != None):\n",
-    "            getValues(node.right_child,depth-1,vals)\n",
-    "        else:\n",
-    "            if (depth-1==0):\n",
-    "                vals.append(node.right_child)\n",
+    "            if(node.left_child != None):\n",
+    "                self.getValues(depth-1,node.left_child,vals)\n",
+    "            else:\n",
+    "                for i in range(int(2**(depth-1))):\n",
+    "                    vals.append(None)\n",
+    "            if(node.right_child != None):\n",
+    "                self.getValues(depth-1,node.right_child,vals)\n",
+    "            else:\n",
+    "                for i in range(int(2**(depth-1))):\n",
+    "                    vals.append(None)\n",
     "        return vals    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 410,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0, None, None, 4]"
+       "[None, None, None, None, None, None, None, 5]"
       ]
      },
-     "execution_count": 290,
+     "execution_count": 410,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,64 +216,29 @@
     "tree.insert(3)\n",
     "tree.insert(0)\n",
     "tree.insert(4)\n",
-    "tree.getValues(2)"
+    "tree.insert(5)\n",
+    "tree.getValues(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 353,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0, None, None, 4]"
+       "[]"
       ]
      },
-     "execution_count": 293,
+     "execution_count": 353,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tree.getValues(2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 267,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0, None, None, 4]\n"
-     ]
-    }
-   ],
-   "source": [
-    "#vals = []\n",
-    "\n",
-    "def getValues(node,depth,vals = []):\n",
-    "    if (depth==0):\n",
-    "        vals.append(node.value)\n",
-    "        return\n",
-    "    if(node.left_child != None):\n",
-    "        values(node.left_child,depth-1,vals)\n",
-    "    else:\n",
-    "        if (depth-1==0):\n",
-    "            vals.append(node.left_child)\n",
-    "    if(node.right_child != None):\n",
-    "        values(node.right_child,depth-1,vals)\n",
-    "    else:\n",
-    "        if (depth-1==0):\n",
-    "            vals.append(node.right_child)         \n",
-    "node = tree.tree\n",
-    "getValues(node,2)\n",
-    "print(vals)\n",
-    "    \n",
-    "    "
+    "nonetree = BinaryTree()\n",
+    "nonetree.getValues(0)"
    ]
   },
   {
