--- a/lectures/L13/L13.ipynb
+++ b/lectures/L13/L13.ipynb
@@ -584,6 +584,15 @@
     "1. Draw a BST for the array \n",
     "2. Delete the node with value $13$"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
