--- a/homeworks/HW7/HW7-Final.ipynb
+++ b/homeworks/HW7/HW7-Final.ipynb
@@ -28,11 +28,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 403,
-   "metadata": {},
+   "execution_count": 195,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "class Node():\n",
+    "class NodeLL():\n",
     "    def __init__(self,value,pointer):\n",
     "        self.value = value\n",
     "        self.next = pointer\n",
@@ -42,14 +44,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 404,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [],
    "source": [
     "class LinkedList():\n",
     "    def __init__(self, head):\n",
     "        self.last_pointer = None\n",
-    "        self.head_node = Node(head,self.last_pointer)\n",
+    "        self.head_node = NodeLL(head,self.last_pointer)\n",
+    "        self.len = 1\n",
     "    def __len__(self):\n",
     "        return len(self.nodes)\n",
     "    def __repr__(self):\n",
@@ -57,22 +60,30 @@
     "    def __getitem__(self,index):\n",
     "        node_num = 0\n",
     "        node = self.head_node\n",
-    "        while node_num != index:\n",
-    "            node, node_num = node.next,node_num+1\n",
-    "        return node.value\n",
+    "        if not (index > self.len):\n",
+    "            while node_num != index:\n",
+    "                if(node.next == None):\n",
+    "                    node, node_num = node.next,node_num+1\n",
+    "            return node.value\n",
+    "        else:\n",
+    "            return \"No element at this index.\"\n",
     "    def insert_front(self,element):\n",
-    "        new_node = Node(element,self.head_node)\n",
+    "        new_node = NodeLL(element,self.head_node)\n",
     "        self.head_node = new_node\n",
+    "        self.len += 1\n",
     "    def insert_back(self,element):\n",
     "        node = self.head_node\n",
     "        while node.next != None:\n",
     "            node = node.next\n",
-    "        node.next = Node(element,None)"
+    "        node.next = NodeLL(element,None)\n",
+    "        self.len += 1\n",
+    "    def __len__(self):\n",
+    "        return self.len"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 406,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [
     {
@@ -81,12 +92,13 @@
        "'LinkedList(3)'"
       ]
      },
-     "execution_count": 406,
+     "execution_count": 200,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#testing class\n",
     "llist = LinkedList(1)\n",
     "llist.insert_front(2)\n",
     "llist.insert_front(3)\n",
@@ -143,8 +155,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 407,
-   "metadata": {},
+   "execution_count": 182,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "class Node():\n",
@@ -155,11 +169,11 @@
     "class BinaryTree():\n",
     "    def __init__(self):\n",
     "        self.tree = None\n",
-    "    def insert(self,value):\n",
+    "    def insert(self,val):\n",
     "        if(self.tree == None):\n",
-    "            self.tree = Node(value)\n",
+    "            self.tree = Node(val)\n",
     "        else:\n",
-    "            self.add(value,self.tree)\n",
+    "            self.add(val,self.tree)\n",
     "    def add(self,value,node):\n",
     "        if(value < node.value):\n",
     "            if(node.left_child == None):\n",
@@ -190,12 +204,49 @@
     "            else:\n",
     "                for i in range(int(2**(depth-1))):\n",
     "                    vals.append(None)\n",
-    "        return vals    "
+    "        return vals\n",
+    "\n",
+    "    def search(self,value, node,parent=None):\n",
+    "        if(node != None):\n",
+    "            if(value < node.value):\n",
+    "                return self.search(value, node.left_child,node)\n",
+    "            elif(value > node.value):\n",
+    "                return self.search(value,node.right_child,node)\n",
+    "            elif(node.value == value):\n",
+    "                return parent,node\n",
+    "        else:\n",
+    "            raise Exception()\n",
+    "                    \n",
+    "    def remove(self, val):\n",
+    "        parent, node = self.search(val,self.tree)\n",
+    "        if(parent == None):\n",
+    "            self.tree = None\n",
+    "            return\n",
+    "        if((node.left_child == None) and (node.right_child == None)):\n",
+    "            if (parent.value > val):\n",
+    "                parent.left_child = None\n",
+    "            if (parent.value < val):\n",
+    "                parent.right_child = None\n",
+    "        if((node.left_child == None) or (node.right_child == None)):\n",
+    "            if (node.left_child != None):\n",
+    "                replacing_node = node.left_child\n",
+    "            if (node.right_child != None):\n",
+    "                replacing_node = node.right_child\n",
+    "            if (parent.value > val):\n",
+    "                parent.left_child = replacing_node\n",
+    "            if (parent.value < val):\n",
+    "                parent.right_child = replacing_node\n",
+    "        if((node.left_child != None) and (node.right_child != None)):\n",
+    "            replacing_node = node.left_child\n",
+    "            if (parent.value > val):\n",
+    "                parent.left_child = replacing_node\n",
+    "            if (parent.value < val):\n",
+    "                parent.right_child = replacing_node"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 410,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [
     {
@@ -204,12 +255,13 @@
        "[None, None, None, None, None, None, None, 5]"
       ]
      },
-     "execution_count": 410,
+     "execution_count": 183,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Testing insert() & getValues()\n",
     "tree = BinaryTree()\n",
     "tree.insert(2)\n",
     "tree.insert(1)\n",
@@ -222,23 +274,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 353,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[]"
+       "[1, 3]"
       ]
      },
-     "execution_count": 353,
+     "execution_count": 185,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "nonetree = BinaryTree()\n",
-    "nonetree.getValues(0)"
+    "#Testing remove()\n",
+    "t2 = BinaryTree()\n",
+    "t2.insert(2)\n",
+    "t2.insert(1)\n",
+    "t2.insert(4)\n",
+    "t2.insert(3)\n",
+    "t2.insert(5)\n",
+    "t2.remove(4)\n",
+    "t2.getValues(1)"
    ]
   },
   {
