--- a/lectures/L14/L14.ipynb
+++ b/lectures/L14/L14.ipynb
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true,
     "slideshow": {
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -411,6 +411,29 @@
     "    except StopIteration:\n",
     "        del it\n",
     "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'will'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = Sentence(\"Dogs will save the world and cats will eat it.\")\n",
+    "it = iter(a)\n",
+    "next(it)\n",
+    "next(it)"
    ]
   },
   {
