--- a/lectures/L15/Exercise_1-Final.ipynb
+++ b/lectures/L15/Exercise_1-Final.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Generator implmentation ~ one class\n",
+    "#Generator implmentation ~ one class with both iter and iterable \n",
     "class Sentence: # An iterable\n",
     "    def __init__(self, text): \n",
     "        self.text = text\n",
