--- a/lectures/L15/Exercise_1-Final.ipynb
+++ b/lectures/L15/Exercise_1-Final.ipynb
@@ -2,8 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
+   "execution_count": 37,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Generator implmentation ~ one class with both iter and iterable \n",
@@ -11,11 +13,9 @@
     "    def __init__(self, text): \n",
     "        self.text = text\n",
     "        self.words = text.split()\n",
-    "    def mygen(self,words):\n",
-    "        for i in words:\n",
-    "            yield i\n",
+    "    \n",
     "    def __iter__(self):\n",
-    "        return self.mygen(self.words)\n",
+    "        yield from self.words\n",
     "    \n",
     "    def __repr__(self):\n",
     "        return 'Sentence(%s)' % reprlib.repr(self.text)"
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
